# EffectiveMobileTest

./: .env.dev  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.dev.yml  compose.yml  pyproject.toml
src/: conftest.py  manage.py
src/core/: models.py
src/core/api/: views.py
src/core/management/commands/: seed_db.py
src/core/tests/: test_api.py
src/effective_mobile_test/: asgi.py  settings.py  urls.py  wsgi.py
src/permissions_management_demo/: asgi.py  settings.py  urls.py  wsgi.py
src/product/: constants.py  models.py  serializers.py  urls.py  views.py
src/product/management/commands/: seed_db.py
src/product/migrations/: 0001_initial.py  0002_region_productavailability.py  0003_alter_productavailability_product_and_more.py
src/product/tests/: factories.py  test_product_permissions.py
src/user/: constants.py  models.py  permissions.py  urls.py
src/user/migrations/: 0001_initial.py  0002_alter_user_middle_name.py  0003_userproductpermission.py  0004_alter_userproductpermission_region_and_more.py
src/user/serializers/: __init__.py  change_email_serializer.py  change_password_serializer.py  change_role_serializer.py  login_serializer.py  logout_serializer.py  user_create_serializer.py  user_product_permission_serializer.py  user_retrieve_serializers.py  user_update_serializer.py
src/user/services/: product_permission_service.py
src/user/tests/: factories.py  test_change_email.py  test_change_password.py  test_create_user.py  test_create_user_permission.py  test_delete_user.py  test_delete_user_permission.py  test_list_users.py  test_login_user.py  test_logout_user.py  test_refresh_token.py  test_retrieve_user.py  test_retrieve_user_permission.py  test_retrieve_user_permissions.py  test_update_role.py  test_update_user.py  test_update_user_permission.py
src/user/views/: __init__.py  base_user_change_view.py  change_email_view.py  change_password_view.py  login_view.py  logout_view.py  user_product_permission_views.py  user_view_set.py
